# mot

./: .env.example  .gitignore  DESIGN.md  PRODUCT-PR.md  PRODUCT.md  README.md  RELEASE.md  components.json  package-lock.json  package.json  skills-lock.json  wxt.config.ts
.wxt/: eslint-auto-imports.mjs
components/: KeybindInput.tsx
docs/: CNAME  authenticated-model-cdn.md  highlight-sync.md  index.html  ipa-g2p-notes.md  main.js  styles.css  testing.md
entrypoints/: background.ts  google-docs-annotate.content.ts  library.html  offscreen.html  options.html  overlay.content.ts  overlay.content.tsx  transcript-edit-guard.content.ts  transcript.content.ts  transcript.content.tsx  youtube-media-sync.content.ts
hooks/: useAutoGrowRows.ts  useDocumentEvent.ts  useEscapeKey.ts  useEventListener.ts  useOverlayDismissals.ts  useOverlayDrag.ts  usePointerDownOutside.ts  useTranscriptEditGuard.ts  useWindowEvent.ts  useWordSurfacePronunciation.ts
lib/: create-store.ts  cross-context-store.ts
scripts/: check-version.mjs  clean-web-ext-tmp.mjs  copy-ort-wasm.mjs  copy-stt-assets.mjs  copy-tesseract-assets.mjs  models.py  (+4 more)
server/: .env.example  README.md  allowed_users.example.json  pyproject.toml
server/docs/: frp-setup.md
server/motif_gateway/: config.py  main.py  translate.py
server/motif_gateway.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
server/motif_gateway/auth/: deps.py  google.py  jwt.py  routes.py
server/scripts/: common.sh  frpc.motif.toml.snippet  health.sh  log.sh  restart.sh  start-local.sh  status.sh  stop.sh
(+164 files in other folders)
