[project]
name = "motif-gateway"
version = "0.1.0"
description = "Motif remote inference gateway (translation, TTS, STT)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "transformers>=4.46.0",
  "sentencepiece>=0.2.0",
  "torch>=2.4.0",
  "google-auth>=2.36.0",
  "PyJWT>=2.9.0",
  "requests>=2.32.0",
]

[project.scripts]
motif-gateway = "motif_gateway.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["motif_gateway*"]
